# numcpp

./: CMakeLists.txt  matrix.cpp
benchmark/: diagnostics.cpp  diagnostics.hpp  main.cpp  matrix_test.cpp  temp.py
benchmark/array_iteration/: array_iteration_1.cpp
benchmark/memory/: memory_access.cpp
driver/: main.cpp
numcpp/: array.hpp  defs.hpp  matrix.hpp  matrix_bones.hpp  matrix_layout.hpp  matrix_meat.hpp  narray.cpp  narray.hpp  ndarray.cpp  ndarray.hpp  ndarray_bones.hpp  ndarray_meat.hpp  refcount.cpp  refcount.hpp  sp_mat_bones.hpp  vec.hpp
scrapped/: array.hpp
